--- a/myweather/index.html
+++ b/myweather/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1>Weather App</h1>
+        <h1>WeatherWiseHub</h1>
         <div class="tab-container">
             <p class="tab" data-userWeather>Your weather</p>
             <p class="tab" data-searchWeather>Search Weather</p>
