quiz end scoring issue resolved

--- a/quiz-app/index.html
+++ b/quiz-app/index.html
@@ -210,15 +210,14 @@
             <div class="score">
               <span class="score-text">Your score:</span>
               <div>
-                <span class="final-score">0</span>
-                <span class="total-score">/10</span>
+                <span class="final-score" data-finalScore>0</span>
+                <span class="total-score" data-finalScore>/10</span>
               </div>
             </div>
             <button class="btn restart" data-restartBtn="">Restart Quiz</button>
         </div>
     </div>
    
-    <h1 class="hello" style="display: none;">hello world</h1>
 
     <script src="script.js"></script>
 </body>
