--- a/Tetris-game/index.html
+++ b/Tetris-game/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <div class="container-one">
             <h3>Next Tetromino</h3>
+            <!-- // next tetromino -->
             <div class="next-block" data-nextTetrimino></div>
             <div class="score-container">
                 <h1>Your score</h1>
